2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.h:
	* makeinfo/insertion.c: new rawdocbook and rawxml insertion types to
	provide better block names in error messages (instead of "rawhtml" for
	everything.)
	(current_item_function, insertion_type_pname, find_type_from_name)
	(begin_insertion, end_insertion, discard_insertions, cm_docbook)
	(cm_xml, cm_item): honor new types.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (cm_image): issue only a warning instead of an
	error when .txt file is unreadable, to better comply with the manual.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/sectioning.c (sectioning_underscore): insert label="" only
	when the output format is Docbook.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (cm_end): get rest of the line before returning
	in case of error, so the parameter to @end does not get leaked into
	the output document.

	* makeinfo/makeinfo.c (discard_until): when the expected string is not
	found, check to see if we are looking for @end, and if so issue a more
	descriptive error message.
	(execute_string): keep track of insertion stack to catch multiline
	commands where they are not allowed.
	Report from: Dumas Patrice <dumas@centre-cired.fr>, Wed, 18 Jun 2003
	09:41:56 +0200.

2003-11-21  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/multi.c (multitable_item): start <tbody> immediately if
	this a regular @item, and first in the table

2003-11-19  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/footnote.c (output_pending_notes): always output footnotes
	with in_fixed_width_font = 0, so entity substitutions can take place.

2003-11-19  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/footnote.c (cm_footnote, output_pending_notes): provide
	back link from footnote marker.

2003-11-19  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (cm_insert_copying): remove blockquote from
	copying_text when inside bookinfo and the output format is Docbook.

2003-11-19  Alper Ersoy  <dirt@gtk.org>
